--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-	<link rel="stylesheet" href="src/index.css">
-	<script src="src/main.js" async></script>
-	<script src="app.js" defer type="module"></script>
-	<title>AdminSite</title>
-</head>
-<body>
-	
-</body>
-</html>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/index.css" />
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+	  <link rel="stylesheet" href="style.css">
+    <script type="module" src="/src/my-element.js"></script>
+  </head>
+  <body>
+    <my-element></my-element>
+  </body>
