feat: :bug: fixed bug
bug

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <script type="module" src="/src/my-element.js"></script>
   </head>
   <body>
-    <my-pelicula></my-pelicula>
+    <my-element></my-element>
   </body>
